syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpcdemo";
option java_outer_classname = "UnaryServiceProto";

service UnaryService {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  string message = 1;
}

message MessageResponse {
  string response = 1;
}
